syntax = "proto3";

package sole.api.v1.viper.leveldb;

option go_package = "github.com/searKing/sole/pkg/appinfo;appinfo";

message AppInfo {
  string version = 1; // 编译版本
  string git_hash = 2; // 源码hash
  string build_time = 3; // 编译时间

  string service_name = 4; // 服务名称
  string service_display_name = 5; // 服务全称
  string service_description = 6; // 服务描述
  string service_id = 7; // 服务实例ID
}
